fix white space

--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .colorlib-blog,
 #colorlib-subscribe,
 #colorlib-footer {
-  padding-bottom: 9em;
+  padding-bottom: 0em;
   clear: both; }
 
 .colorlib-shop .icon {
